; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_port.c_scic_sds_port_enable_port_task_scheduler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_port.c_scic_sds_port_enable_port_task_scheduler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@control = common dso_local global i32 0, align 4
@ENABLE = common dso_local global i32 0, align 4
@SUSPEND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @scic_sds_port_enable_port_task_scheduler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scic_sds_port_enable_port_task_scheduler(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @control, align 4
  %6 = call i32 @scu_port_task_scheduler_read(i32* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @ENABLE, align 4
  %8 = call i32 @SCU_PTSxCR_GEN_BIT(i32 %7)
  %9 = load i32, i32* @SUSPEND, align 4
  %10 = call i32 @SCU_PTSxCR_GEN_BIT(i32 %9)
  %11 = or i32 %8, %10
  %12 = load i32, i32* %3, align 4
  %13 = or i32 %12, %11
  store i32 %13, i32* %3, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* @control, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @scu_port_task_scheduler_write(i32* %14, i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @scu_port_task_scheduler_read(i32*, i32) #1

declare dso_local i32 @SCU_PTSxCR_GEN_BIT(i32) #1

declare dso_local i32 @scu_port_task_scheduler_write(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
